# opengl-tut

./: .gitignore  CMakeLists.txt  readme.md
assets/shaders/: fragment.glsl  skyboxf.glsl  skyboxv.glsl  vertex.glsl
include/: App.hpp  Camera.hpp  Cube.hpp  Icosphere.hpp  LoadShader.hpp  Mesh.hpp  OBJParser.hpp  Random.hpp  Sphere.hpp
src/: App.cc  Camera.cc  Cube.cc  Icosphere.cc  LoadShader.cc  Main.cc  Mesh.cc  OBJParser.cc  Sphere.cc
